Fix navbar hide behind element on ipad

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,6 +28,8 @@ footer {
   margin-bottom: 0px;
   border-bottom: 1px solid #ccc;
   text-transform: uppercase;
+  position: relative;
+  z-index: 1;
   @media (min-width: $screen-sm-min){
     padding-right: 30px;
     padding-left: 30px;
